# gba-from-scratch

./: 404.html  Cargo.toml  README.md  book.toml  dump.bat  ex1.html  ex2.html  ex3.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
.cargo/: config.toml
.github/workflows/: pages.yml  rust.yml
book_src/: SUMMARY.md  ex1.md  ex2.md  ex3.md  introduction.md  overview.md
book_src/audio/: psg.md  recordings.md
book_src/misc/: bios.md  dma.md  ewram.md  fixed_point.md  prng.md  sram.md
book_src/setup/: cargo.md  linker.md  main.md  panic_handler.md  rom_image.md  start.md
book_src/video/: affine.md  bitmap.md  blending.md  mosaic.md  text.md  tiles.md  window.md
examples/: ex1.rs  ex2.rs  ex3.rs  input.rs
linker_scripts/: normal_boot.ld  standard_boot.ld
src/: asm_runtime.rs  lib.rs
theme/: head.hbs
