[package]
name = "gba_from_scratch"
description = "Library code for the `GBA From Scratch With Ferris` series"
repository = "https://github.com/Lokathor/gba-from-scratch"
version = "0.0.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"
publish = false

[dependencies]
bitfrob = "1.3.0"
voladdress = "1.3.0"

[profile.dev]
opt-level = 3
